--- a/static/form.html
+++ b/static/form.html
@@ -1,4 +1,10 @@
-<form name="contact" netlify hidden method="post" action="/contact/success">
+<form
+  name="contact-form"
+  netlify
+  hidden
+  method="post"
+  action="/contact/success"
+>
   <input type="text" name="name" placeholder="Name" />
   <input type="email" name="email" placeholder="E-mail" />
   <textarea name="message" placeholder="Message"></textarea>
